--- a/scalemon-ops/helm-charts/scalemon/templates/deployment.yaml
+++ b/scalemon-ops/helm-charts/scalemon/templates/deployment.yaml
@@ -35,18 +35,19 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 80
+              containerPort: 8085
               protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /
-              port: http
-          readinessProbe:
-            httpGet:
-              path: /
-              port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+        - name: "scalemon-mongo"
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
+          image: "mongo:6.0.2"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          ports:
+            - name: http
+              containerPort: 27017
+              protocol: TCP
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
