Adapted for Helm deployment

--- a/scalemon/.helm/scalemon/values.yaml
+++ b/scalemon/.helm/scalemon/values.yaml
@@ -38,7 +38,7 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 80
+  port: 8085
 
 ingress:
   enabled: false
@@ -80,3 +80,6 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+mongodb:
+  persistence.enabled: false
